cncProd/force-app/main/default/objects/DocuSignTemplate__mdt/DocuSignTemplate__mdt.object-meta.xml
<CustomObject>
    <label>DocuSign Template</label>
    <pluralLabel>DocuSign Templates</pluralLabel>
</CustomObject>