cncProd/force-app/main/default/objects/DocuSignTemplate__mdt/fields/DocuSign_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Brand_ID__c</fullName>
    <label>DocuSign Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>