cncProd/force-app/main/default/objects/DocuSignTemplate__mdt/fields/DocuSign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Template_Id__c</fullName>
    <label>DocuSign Template Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>