cncProd/force-app/main/default/objects/DocuSignTemplate__mdt/fields/Used_Car_Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Agreement_Template__c</fullName>
    <description>Id of used car agreement template</description>
    <label>Used Car Agreement Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>