cncProd/force-app/main/default/objects/DocuSignTemplate__mdt/listViews/MB_Templates.listView-meta.xml
<ListView>
    <fullName>MB_Templates</fullName>
    <columns>MasterLabel</columns>
    <columns>DocuSign_Template_Id__c</columns>
    <columns>Used_Car_Agreement_Template__c</columns>
    <columns>DocuSign_Brand_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>MB</value>
    </filters>
    <label>MB Templates</label>
</ListView>